--- a/Currency-Upper-LowerCaseFiltering/index.html
+++ b/Currency-Upper-LowerCaseFiltering/index.html
@@ -1,17 +1,19 @@
 <!doctype html>
 <html>
-<head>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-	<script src="app.js"></script>
-</head>
-	<body ng-app="app" ng-controller="MainController as main">
-		<h2>Contact List</h2>
-		<hr/>
-		<label>Search for: <input type="text" ng-model="searchfor" /></label>
-		<div ng-repeat="person in main.people | filter:searchfor">
-			<p> {{person.name}}<br/>
-				{{person.phone}}</p>
-		</div>
-
-	</body>
+    <head>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js">
+        </script>
+        <script src="app.js"></script>
+    </head>
+    <body ng-app="app" ng-controller="MainController as main">
+      <h2>Contact List</h2>
+      <hr />
+      <div ng-repeat="item in main.items">
+        <table><tr>
+          <td>{{item.name | lowercase}}</td>
+          <td>{{item.price | currency}}</td>
+        </tr></table>
+      </div>
+      
+    </body>
 </html>
